--- a/Crud/Server/vercel.json
+++ b/Crud/Server/vercel.json
@@ -1,8 +1,14 @@
-
 {
   "version": 2,
+  "buildCommand": "npm install",
+  "installCommand": "npm install",
+  "outputDirectory": ".",
+  "framework": null,
   "builds": [
-    { "src": "index.js", "use": "@vercel/node" }
+    {
+      "src": "index.js",
+      "use": "@vercel/node"
+    }
   ],
   "routes": [
     { "src": "/(.*)", "dest": "index.js" }
