--- a/Crud/Server/package.json
+++ b/Crud/Server/package.json
@@ -1,20 +1,23 @@
 {
-  "name": "server",
+  "name": "mern-crud-server",
   "version": "1.0.0",
-  "description": "Express backend for CRUD app",
+  "description": "Express backend for MERN CRUD app",
   "main": "index.js",
-  "scripts": {
-    "start": "node index.js"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "type": "commonjs",
+  "scripts": {
+    "start": "node index.js",           
+    "vercel-build": "echo 'Vercel build complete'"  
+  },
+  "keywords": ["express", "mongodb", "vercel", "crud", "mern"],
+  "author": "Ibad Ullah Khan",
+  "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
-    "mongodb": "^6.20.0",
     "mongoose": "^8.3.1"
+  },
+  "engines": {
+    "node": ">=18.x"   
   }
 }
