--- a/Crud/Server/vercel.json
+++ b/Crud/Server/vercel.json
@@ -1,9 +1,9 @@
 {
   "version": 2,
   "builds": [
-    { "src": "Server/index.js", "use": "@vercel/node" }
+    { "src": "index.js", "use": "@vercel/node" }
   ],
   "routes": [
-    { "src": "/(.*)", "dest": "Server/index.js" }
+    { "src": "/(.*)", "dest": "index.js" }
   ]
 }
